Wed 26 Jun 2019 Aleksey
	* Bugfix: --sysconfdir was ignored while searching for config on Linux

Tue 25 Jun 2019 Aleksey
	* support verification of base64-formated hash sums
	* add formatting options: --hex, --base32, -b/--base64

Mon 17 Jun 2019 Aleksey
	* Bugfix: properly handle symlinks on the command line

Mon 04 Feb 2019 Aleksey
	* === Version 1.3.8 ===

Wed Jan 30 2019 Aleksey
	* rename Windows encoding options: --ansi to --win, --oem to --dos

Mon Jan 28 2019 Aleksey
	* support GOST R 34.11-2012 hash function
	* changed the short option `-G' to be alias of --gost12-256
	* changed printf format token `%g' to be alias of %{gost12-256}

Sat Dec 22 2018 Aleksey
	* === Version 1.3.7 ===
	* new option `--message==<string>' to calculate a hash for string
	* changed magnet link short option from '-m' to '-g'

Sat Sep 29 2018 Aleksey
	* Bugfix: `--file-list=-' shall read a file list from stdin

Tue Sep 11 2018 Aleksey
	* CRC32C hash function supported, option --crc32c
	* speedup CRC32 hash function

Wed Mar 14 2018 Aleksey
	* === Version 1.3.6 ===
	* support --file-list option

Sun Mar 11 2018 And Sch
	* librhash: speedup sha3

Sun Feb 18 2018 Aleksey
	* Bugfix: fix --follow option

Mon Jan 29 2018 J. Peter Mugaas
	* better MSYS and CygWin support

Fri Jan 26 2018 Aleksey
	* configuration script

Mon Sep  4 2017 Aleksey
	* Bugfix: broken binary hash output

Mon Aug 28 2017 Aleksey
	* Bugfix: fix running on WinXP

Mon Aug 14 2017 Aleksey
	* === Version 1.3.5 ===
	* look for locales directory at PROGRAM_DIRECTORY\locale on Windows
	* look for config at PROGRAM_DIRECTORY\rhashrc on Windows

Fri Aug  4 2017 Aleksey
	* support LibRhash bindings to PHP7

Sun Jul 30 2017 Aleksey
	* Bugfix: illegal instruction error on macOS

Sat Jul 29 2017 Aleksey
	* improve utf-8 support on Windows

Thu Jul 27 2017 Aleksey
	* Bugfix: fix access to long paths on Windows

Mon Jul 17 2017 Aleksey
	* add ca, fr, ro translations

Sun Jul 16 2017  Darío Hereñú
	* full Spanish translation
